# SentinelForge-EDR-Telemetry-Lab

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_ingestion_tables.py  0002_create_normalized_events_table.py  0003_alerts.py  0004_reject_audit.py
artifacts/replay/: benign-admin-activity_20260425T145224Z.json  encoded-powershell-positive_20260425T145156Z.json
datasets/replay/: benign_admin_activity.json  encoded_powershell_positive.json
deploy/compose/: docker-compose.yml
deploy/prometheus/: prometheus.yml
docs/: architecture.md  from-event-to-alert.md  rules-and-benchmark.md
docs/pt-br/: fluxo-do-evento-ao-alerta.md  resumo-do-projeto.md
src/sentinelforge/: main.py
src/sentinelforge/core/: logging.py  settings.py
src/sentinelforge/db/: base.py  session.py
src/sentinelforge/messaging/: producer.py
src/sentinelforge/middleware/: request_context.py  security.py
src/sentinelforge/models/: __init__.py  alert.py  alert_evidence.py  ingest_audit.py  ingest_rejection_audit.py  normalized_event.py  raw_event.py
src/sentinelforge/observability/: metrics.py
src/sentinelforge/replay/: runner.py
src/sentinelforge/schemas/: events.py  normalized.py  replay.py
src/sentinelforge/services/: alert_service.py  audit_service.py  detection_service.py  ingest_service.py  normalization_service.py  normalized_publish_service.py  publish_service.py
src/sentinelforge/workers/: detector_consumer.py  normalizer_consumer.py  (+1 more)
tests/: conftest.py
(+10 files in other folders)
